[metadata]
name = sample_package
#version = attr: src.VERSION
description = This is a sample git repository
long_description = file: README.rst
keywords = one, two
license = License Proprietary -- All Rights Reserved
platform = Platform Independent
classifiers =
    Framework :: Django
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = True
packages = find:
install_requires = 
  flask
  requests
